Fix safari layout bug

--- a/projects/saab/saab.css
+++ b/projects/saab/saab.css
@@ -390,7 +390,6 @@ main ul li {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
   }
 
   .top {
